--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,10 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+<!--    <data>-->
+<!--        <variable-->
+<!--            name="person"-->
+<!--            type="com.example.td_databinding_20220422.Person" />-->
+<!--    </data>-->
+
     <data>
         <variable
             name="person"
-            type="com.example.td_databinding_20220422.Person" />
+            type="com.example.td_databinding_20220422.ObservablePerson" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -23,7 +29,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="textId" />
+            tools:text="textId"/>
 
         <TextView
             android:id="@+id/textView2"
@@ -34,7 +40,7 @@
             app:layout_constraintEnd_toEndOf="@+id/textView"
             app:layout_constraintStart_toStartOf="@+id/textView"
             app:layout_constraintTop_toBottomOf="@+id/textView"
-            tools:text="textName" />
+            tools:text="textName"/>
 
         <TextView
             android:id="@+id/textView3"
@@ -45,7 +51,7 @@
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2"
-            tools:text="textFirstname" />
+            tools:text="textFirstname"/>
 
         <TextView
             android:id="@+id/textView4"
@@ -56,14 +62,16 @@
             app:layout_constraintEnd_toEndOf="@+id/textView3"
             app:layout_constraintStart_toStartOf="@+id/textView3"
             app:layout_constraintTop_toBottomOf="@+id/textView3"
-            tools:text="textAge" />
+            tools:text="textAge"/>
 
         <Button
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="28dp"
-            android:text="Button"
+            android:onClick="@{()->person.increaseAge()}"
+            android:text="+"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,10 +82,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            android:text="Button"
+            android:text="-"
+            android:textSize="28sp"
             app:layout_constraintEnd_toEndOf="@+id/button"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button"
-            app:layout_constraintTop_toBottomOf="@+id/button" />
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            android:onClick="@{()->person.decreaseAge()}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
