--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:layout_marginTop="28dp"
             android:onClick="@{()->person.increaseAge()}"
             android:text="+"
-            android:textSize="28sp"
+            android:textSize="38sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
@@ -89,11 +89,23 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:text="-"
-            android:textSize="28sp"
+            android:textSize="38sp"
             app:layout_constraintEnd_toEndOf="@+id/button"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/button"
             app:layout_constraintTop_toBottomOf="@+id/button"
             android:onClick="@{()->person.decreaseAge()}"/>
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="221dp"
+            android:layout_height="34dp"
+            android:layout_marginTop="20dp"
+            android:max="99"
+            android:min="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button2"
+            android:progress="@={person.age}"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
